# cgshop2022-gitastrophe

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  hipsycl_build.sh
HEAD/: head
HEAD/src/: graphe.cpp  graphe.h  head.cpp  head.h  solution.cpp  solution.h  tabouSearch.cpp  tabouSearch.h
HEAD/src/util/: gfile.h
src/: conflict_optimizer.h  conflict_optimizer_gpu.h  conflict_optimizer_gpu_comments.h  dimacs-encodings.h  dimacs.cpp  dimacs_optimizer.h  encodings.h  genetic.h  grouping_algo.h  head.h  head_runner.h  local_search.h  local_search_gpu.h  matching_init.h  planar_decomp.h  recursive_init.h  save_folder.h  simple.cpp  simple.h  simple_bad.pp.backup  simple_conflict.h  simple_conflict_gpu.h  simple_genetic.h  simple_head.h  simple_recurse.h  simple_search.h  simple_search_gpu.h  simple_tabulate.h  tabucol.h
src/verify/: bentley_ottmann_any_intersection.hpp  geom.hpp  verify_coloring.hpp
